# backend

./: .gitignore  Cargo.toml  README.md  diesel.toml  permissionDia.d2
.github/workflows/: main.yml
migrations/2024-09-24-174533_enums/: down.sql  up.sql
migrations/2024-09-24-175533_users/: up.sql
migrations/2024-09-24-185345_student/: up.sql
migrations/2024-09-24-202418_domain/: down.sql  up.sql
migrations/2024-09-24-203455_faculty/: down.sql  up.sql
migrations/2024-09-24-210359_student_domain_coordinator/: down.sql  up.sql
migrations/2024-09-24-210408_faculty_coordinator/: down.sql  up.sql
migrations/2024-09-24-210421_events/: up.sql
migrations/2024-09-24-211747_student_event_coordinator/: down.sql  up.sql
migrations/2024-09-24-211911_workshop/: down.sql  up.sql
migrations/2024-09-24-212005_teams/: up.sql
migrations/2024-09-24-212012_team_members/: down.sql  up.sql
migrations/2024-09-24-212020_sponsors/: down.sql  up.sql
migrations/2024-09-25-053648_student_workshop_coordinators/: down.sql  up.sql
migrations/2024-09-25-054320_team_event_participation/: down.sql  up.sql
migrations/2024-09-27-102325_individual_event_participation/: down.sql  up.sql
migrations/2024-09-27-102339_workshop_participation/: down.sql  up.sql
migrations/2024-09-28-055046_team_requests/: down.sql  up.sql
migrations/2024-10-03-112207_add_eie/: down.sql  up.sql
migrations/2024-10-03-112708_payments/: up.sql
src/: auth.rs  domain.rs  event.rs  forms.rs  lib.rs  main.rs  models.rs  profile.rs  routes.rs  schema.rs  state.rs  team.rs  workshop.rs
(+25 files in other folders)
