[package]
name = "sliet_techfest_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
argon2 = "0.5.3"
axum = { version = "0.7.6", features = ["http2"] }
axum-extra = { version = "0.9.4", features = ["cookie"] }
axum-macros = "0.4.2"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["chrono", "extras", "numeric", "postgres", "r2d2", "time", "uuid"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
highway = "1.2.0"
http = "1.1.0"
image = { version = "0.25.2", features = ["nasm"] }
inquire = { version = "0.7.5", features = ["chrono", "console", "date"] }
jsonwebtoken = "9.3.0"
log = "0.4.22"
mail-send = "0.4.8"
once_cell = "1.19.0"
pretty_env_logger = "0.5.0"
rand = { version = "0.8.5", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-rustls = "0.26.0"
tokio-util = { version = "0.7.12", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }
